--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="Moja praca domowa nr 1" />
     <title>Homework 1</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Nagłówek strony-->
@@ -15,7 +16,7 @@
       <nav>
         <ul>
           <li><a href="/agencja">Agencja</a></li>
-          <li><a href="/portfolio">Portfolio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="/kontakt">Kontakt</a></li>
         </ul>
       </nav>
