Index and portfolio works

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="Moja praca domowa nr 1" />
-    <title>Homework 1</title>
+    <title>Homework 2</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -22,14 +22,134 @@
       </nav>
 
       <!-- Linki w nagłówku -->
-      <div>
-        <a href="tel:+48111111111">+48 111 111 111</a>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      </div>
+      <ul>
+        <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      </ul>
     </header>
 
     <!--Główna zawartość strony-->
-    <main></main>
+    <main>
+      <!--Menu strony-->
+      <div>
+        <ul>
+          <li><button type="button">Wszytkie</button></li>
+          <li><button type="button">Strony</button></li>
+          <li><button type="button">Aplikacje</button></li>
+          <li><button type="button">Dizajn</button></li>
+          <li><button type="button">Marketing</button></li>
+        </ul>
+      </div>
+
+      <!--Zawartość główna strony-->
+      <!--Pierwszy rząd-->
+      <section>
+        <ul>
+          <li>
+            <img
+              src="./images/portfolio1_1.jpg"
+              alt="Komputer z otwartą stroną internetową"
+              width="370"
+              height="294"
+            />
+            <h2>Technocrack</h2>
+            <p>Strona internetowa</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio1_2.jpg"
+              alt="Dwuch zawodników koszykówki walczy o piłkę"
+              width="370"
+              height="294"
+            />
+            <h2>Grafika New Orlean vs Golden Star</h2>
+            <p>Dizajn</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio1_3.jpg"
+              alt="Logo restauracji The Seafood"
+              width="370"
+              height="294"
+            />
+            <h2>Restauracja Seafood</h2>
+            <p>Aplikacja</p>
+          </li>
+        </ul>
+      </section>
+
+      <!--Drugi rząd-->
+      <section>
+        <ul>
+          <li>
+            <img
+              src="./images/portfolio2_1.jpg"
+              alt="Czarne słuchwki bezprzewodowe"
+              width="370"
+              height="294"
+            />
+            <h2>Projekt Prime</h2>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio2_2.jpg"
+              alt="Dwa pudełka w dwuch kolorach i rozmiarach"
+              width="370"
+              height="294"
+            />
+            <h2>Projekt Boxes</h2>
+            <p>Aplikacja</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio2_3.jpg"
+              alt="Monitor z otwartą stroną internetową"
+              width="370"
+              height="294"
+            />
+            <h2>Inspiration has no Borders</h2>
+            <p>Strona internetowa</p>
+          </li>
+        </ul>
+      </section>
+
+      <!--Trzeci rząd-->
+      <section>
+        <ul>
+          <li>
+            <img
+              src="./images/portfolio3_1.jpg"
+              alt="Otwarta książka"
+              width="370"
+              height="294"
+            />
+            <h2>Magazyn Limited Edition</h2>
+            <p>Dizajn</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio3_2.jpg"
+              alt="Zawieszka reklamowa"
+              width="370"
+              height="294"
+            />
+            <h2>Projekt LAB</h2>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio3_3.jpg"
+              alt="Komputer z otwartą stroną internetową i rękoma urzytkownika"
+              width="370"
+              height="294"
+            />
+            <h2>Growing Business</h2>
+            <p>Aplikacja</p>
+          </li>
+        </ul>
+      </section>
+    </main>
 
     <!--Stopka-->
     <footer>
@@ -44,10 +164,10 @@
           rel="noopener noreferrer nofollow"
           >m. Warszawa, Aleje Jerozolimskie 21</a
         >
-        <div>
-          <a href="tel:+48111111111">+48 111 111 111</a>
-          <a href="info@devstudio.com">info@devstudio.com</a>
-        </div>
+        <ul>
+          <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        </ul>
       </address>
     </footer>
   </body>
