--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="Moja praca domowa nr 1" />
-    <title>Homework 1</title>
+    <title>Homework 2</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -22,10 +22,10 @@
       </nav>
 
       <!-- Linki w nagłówku -->
-      <div>
-        <a href="tel:+48111111111">+48 111 111 111</a>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      </div>
+      <ul>
+        <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      </ul>
     </header>
 
     <!--Główna zawartość strony-->
@@ -76,7 +76,7 @@
         <ul>
           <li>
             <img
-              src="./images/obraz1.jpg"
+              src="./images/main1.jpg"
               alt="Ręce pracujące na klawiaturze"
               width="370"
               height="294"
@@ -84,7 +84,7 @@
           </li>
           <li>
             <img
-              src="./images/obraz2.jpg"
+              src="./images/main2.jpg"
               alt="Praca nad aplikacją telefoniczną"
               width="370"
               height="294"
@@ -92,7 +92,7 @@
           </li>
           <li>
             <img
-              src="./images/obraz3.jpg"
+              src="./images/main3.jpg"
               alt="Praca na tablecie"
               width="370"
               height="294"
@@ -162,10 +162,10 @@
           rel="noopener noreferrer nofollow"
           >m. Warszawa, Aleje Jerozolimskie 21</a
         >
-        <div>
-          <a href="tel:+48111111111">+48 111 111 111</a>
-          <a href="info@devstudio.com">info@devstudio.com</a>
-        </div>
+        <ul>
+          <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+          <li><a href="info@devstudio.com">info@devstudio.com</a></li>
+        </ul>
       </address>
     </footer>
   </body>
