--- a/portfolio.html
+++ b/portfolio.html
@@ -140,7 +140,7 @@
           <li>
             <img
               src="./images/portfolio3_3.jpg"
-              alt="Komputer z otwartą stroną internetową i rękoma urzytkownika"
+              alt="Ręce na laptopie z otwartą stroną internetową"
               width="370"
               height="294"
             />
