--- a/portfolio.html
+++ b/portfolio.html
@@ -4,27 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="Moja praca domowa nr 1" />
     <title>Homework 2</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Nagłówek strony-->
     <header>
       <!--Logo w nagłówku-->
-      <a href="./index.html">WebStudio</a>
+      <a class="logo" href="./index.html"
+        ><span class="logo-blue">Web</span>Studio</a
+      >
 
       <!--Menu nawigacyjne-->
       <nav>
-        <ul>
-          <li><a href="/agencja">Agencja</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="/kontakt">Kontakt</a></li>
+        <ul class="nav-menu">
+          <li><a class="menu-blue" href="/agencja">Agencja</a></li>
+          <li><a class="menu" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="menu" href="/kontakt">Kontakt</a></li>
         </ul>
       </nav>
 
       <!-- Linki w nagłówku -->
-      <ul>
-        <li><a href="tel:+48111111111">+48 111 111 111</a></li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <ul class="contact">
+        <li>
+          <a class="mail" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li><a class="tel" href="tel:+48111111111">+48 111 111 111</a></li>
       </ul>
     </header>
 
@@ -154,7 +164,9 @@
     <!--Stopka-->
     <footer>
       <!--Logo w stopce-->
-      <a href="./index.html">WebStudio</a>
+      <a class="logo" href="./index.html"
+        ><span class="logo-blue">Web</span>Studio</a
+      >
 
       <!--Adres i linki w stopce-->
       <address>
@@ -165,8 +177,8 @@
           >m. Warszawa, Aleje Jerozolimskie 21</a
         >
         <ul>
-          <li><a href="tel:+48111111111">+48 111 111 111</a></li>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+48111111111">+48 111 111 111</a></li>
         </ul>
       </address>
     </footer>
