--- a/index.html
+++ b/index.html
@@ -4,64 +4,74 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="Moja praca domowa nr 1" />
     <title>Homework 2</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Nagłówek strony-->
     <header>
       <!--Logo w nagłówku-->
-      <a href="./index.html">WebStudio</a>
+      <a class="logo" href="./index.html"
+        ><span class="logo-blue">Web</span>Studio</a
+      >
 
       <!--Menu nawigacyjne-->
       <nav>
-        <ul>
-          <li><a href="/agencja">Agencja</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="/kontakt">Kontakt</a></li>
+        <ul class="nav-menu">
+          <li><a class="menu-blue" href="/agencja">Agencja</a></li>
+          <li><a class="menu" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="menu" href="/kontakt">Kontakt</a></li>
         </ul>
       </nav>
 
       <!-- Linki w nagłówku -->
-      <ul>
-        <li><a href="tel:+48111111111">+48 111 111 111</a></li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <ul class="contact">
+        <li>
+          <a class="mail" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li><a class="tel" href="tel:+48111111111">+48 111 111 111</a></li>
       </ul>
     </header>
 
     <!--Główna zawartość strony-->
     <main>
       <!--Nagówek skcji głównej-->
-      <section>
+      <section class="h1">
         <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
         <button type="button">Zamów usługe</button>
       </section>
 
       <!--Pierwsza sekcja - lorem ipsum-->
-      <section>
-        <ul>
-          <li>
-            <h4>LOREM IPSUM</h4>
+      <section class="first-section">
+        <ul class="first-section-list">
+          <li class="li">
+            <h4 class="h4">LOREM IPSUM</h4>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
-            <h4>LOREM IPSUM</h4>
+            <h4 class="h4">LOREM IPSUM</h4>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
-            <h4>LOREM IPSUM</h4>
+            <h4 class="h4">LOREM IPSUM</h4>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
             </p>
           </li>
           <li>
-            <h4>LOREM IPSUM</h4>
+            <h4 class="h4">LOREM IPSUM</h4>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
               arcu sem. Sed non sodales dui. Interdum et malesuada
@@ -71,9 +81,9 @@
       </section>
 
       <!--Druga sekcja - czym się zajmujemy-->
-      <section>
-        <h2>Czym się zajmujemy</h2>
-        <ul>
+      <section class="second-section">
+        <h2 class="h2">Czym się zajmujemy</h2>
+        <ul class="second-section-list">
           <li>
             <img
               src="./images/main1.jpg"
@@ -152,7 +162,9 @@
     <!--Stopka-->
     <footer>
       <!--Logo w stopce-->
-      <a href="./index.html">WebStudio</a>
+      <a class="logo" href="./index.html"
+        ><span class="logo-blue">Web</span>Studio</a
+      >
 
       <!--Adres i linki w stopce-->
       <address>
@@ -163,8 +175,8 @@
           >m. Warszawa, Aleje Jerozolimskie 21</a
         >
         <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+48111111111">+48 111 111 111</a></li>
-          <li><a href="info@devstudio.com">info@devstudio.com</a></li>
         </ul>
       </address>
     </footer>
