--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
       <!--Druga sekcja - czym się zajmujemy-->
       <section class="second-section">
-        <h2 class="h2">Czym się zajmujemy</h2>
+        <h2 class="h2-second-section">Czym się zajmujemy</h2>
         <ul class="second-section-list">
           <li>
             <img
@@ -112,9 +112,9 @@
       </section>
 
       <!--Trzecia sekcja - nasz zespół-->
-      <section>
-        <h2>Nasz zespół</h2>
-        <ul>
+      <section class="third-section">
+        <h2 class="h2-third-section">Nasz zespół</h2>
+        <ul class="third section-list">
           <li>
             <img
               src="./images/johndoe1.jpg"
@@ -122,7 +122,7 @@
               width="270"
               height="260"
             />
-            <h3>John Doe</h3>
+            <h3 class="h3">John Doe</h3>
             <p>Product Designer</p>
           </li>
           <li>
@@ -132,7 +132,7 @@
               width="270"
               height="260"
             />
-            <h3>John Doe</h3>
+            <h3 class="h3">John Doe</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
@@ -142,7 +142,7 @@
               width="270"
               height="260"
             />
-            <h3>John Doe</h3>
+            <h3 class="h3">John Doe</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -152,7 +152,7 @@
               width="270"
               height="260"
             />
-            <h3>John Doe</h3>
+            <h3 class="h3">John Doe</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -162,23 +162,30 @@
     <!--Stopka-->
     <footer>
       <!--Logo w stopce-->
-      <a class="logo" href="./index.html"
-        ><span class="logo-blue">Web</span>Studio</a
+      <a class="logo-footer" href="./index.html"
+        ><span class="logo-blue-footer">Web</span>Studio</a
       >
 
       <!--Adres i linki w stopce-->
-      <address>
+      <section>
         <a
+          class="address-link"
           href="https://goo.gl/maps/Dz4RchG2dV1VJyud7"
           target="_blank"
           rel="noopener noreferrer nofollow"
           >m. Warszawa, Aleje Jerozolimskie 21</a
         >
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+        <ul class="contact-footer">
+          <li>
+            <a class="mail-footer" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="tel-footer" href="tel:+48111111111">+48 111 111 111</a>
+          </li>
         </ul>
-      </address>
+      </section>
     </footer>
   </body>
 </html>
