--- a/portfolio.html
+++ b/portfolio.html
@@ -164,23 +164,30 @@
     <!--Stopka-->
     <footer>
       <!--Logo w stopce-->
-      <a class="logo" href="./index.html"
-        ><span class="logo-blue">Web</span>Studio</a
+      <a class="logo-footer" href="./index.html"
+        ><span class="logo-blue-footer">Web</span>Studio</a
       >
 
       <!--Adres i linki w stopce-->
-      <address>
+      <section>
         <a
+          class="address-link"
           href="https://goo.gl/maps/Dz4RchG2dV1VJyud7"
           target="_blank"
           rel="noopener noreferrer nofollow"
           >m. Warszawa, Aleje Jerozolimskie 21</a
         >
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+        <ul class="contact-footer">
+          <li>
+            <a class="mail-footer" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="tel-footer" href="tel:+48111111111">+48 111 111 111</a>
+          </li>
         </ul>
-      </address>
+      </section>
     </footer>
   </body>
 </html>
