--- a/portfolio.html
+++ b/portfolio.html
@@ -42,19 +42,21 @@
     <main>
       <!--Menu strony-->
       <div>
-        <ul>
-          <li><button type="button">Wszytkie</button></li>
-          <li><button type="button">Strony</button></li>
-          <li><button type="button">Aplikacje</button></li>
-          <li><button type="button">Dizajn</button></li>
-          <li><button type="button">Marketing</button></li>
+        <ul class="pf-button-menu">
+          <li>
+            <button class="pf-button-blue" type="button">Wszytkie</button>
+          </li>
+          <li><button class="pf-button" type="button">Strony</button></li>
+          <li><button class="pf-button" type="button">Aplikacje</button></li>
+          <li><button class="pf-button" type="button">Dizajn</button></li>
+          <li><button class="pf-button" type="button">Marketing</button></li>
         </ul>
       </div>
 
       <!--Zawartość główna strony-->
       <!--Pierwszy rząd-->
       <section>
-        <ul>
+        <ul class="pf-section">
           <li>
             <img
               src="./images/portfolio1_1.jpg"
@@ -62,7 +64,7 @@
               width="370"
               height="294"
             />
-            <h2>Technocrack</h2>
+            <h2 class="h2-pf-section">Technocrack</h2>
             <p>Strona internetowa</p>
           </li>
           <li>
@@ -72,7 +74,7 @@
               width="370"
               height="294"
             />
-            <h2>Grafika New Orlean vs Golden Star</h2>
+            <h2 class="h2-pf-section">Grafika New Orlean vs Golden Star</h2>
             <p>Dizajn</p>
           </li>
           <li>
@@ -82,7 +84,7 @@
               width="370"
               height="294"
             />
-            <h2>Restauracja Seafood</h2>
+            <h2 class="h2-pf-section">Restauracja Seafood</h2>
             <p>Aplikacja</p>
           </li>
         </ul>
@@ -90,7 +92,7 @@
 
       <!--Drugi rząd-->
       <section>
-        <ul>
+        <ul class="pf-section">
           <li>
             <img
               src="./images/portfolio2_1.jpg"
@@ -98,7 +100,7 @@
               width="370"
               height="294"
             />
-            <h2>Projekt Prime</h2>
+            <h2 class="h2-pf-section">Projekt Prime</h2>
             <p>Marketing</p>
           </li>
           <li>
@@ -108,7 +110,7 @@
               width="370"
               height="294"
             />
-            <h2>Projekt Boxes</h2>
+            <h2 class="h2-pf-section">Projekt Boxes</h2>
             <p>Aplikacja</p>
           </li>
           <li>
@@ -118,7 +120,7 @@
               width="370"
               height="294"
             />
-            <h2>Inspiration has no Borders</h2>
+            <h2 class="h2-pf-section">Inspiration has no Borders</h2>
             <p>Strona internetowa</p>
           </li>
         </ul>
@@ -126,7 +128,7 @@
 
       <!--Trzeci rząd-->
       <section>
-        <ul>
+        <ul class="pf-section">
           <li>
             <img
               src="./images/portfolio3_1.jpg"
@@ -134,7 +136,7 @@
               width="370"
               height="294"
             />
-            <h2>Magazyn Limited Edition</h2>
+            <h2 class="h2-pf-section">Magazyn Limited Edition</h2>
             <p>Dizajn</p>
           </li>
           <li>
@@ -144,7 +146,7 @@
               width="370"
               height="294"
             />
-            <h2>Projekt LAB</h2>
+            <h2 class="h2-pf-section">Projekt LAB</h2>
             <p>Marketing</p>
           </li>
           <li>
@@ -154,7 +156,7 @@
               width="370"
               height="294"
             />
-            <h2>Growing Business</h2>
+            <h2 class="h2-pf-section">Growing Business</h2>
             <p>Aplikacja</p>
           </li>
         </ul>
