--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
     <main>
       <!--Nagówek skcji głównej-->
       <section class="h1">
-        <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-        <button type="button">Zamów usługe</button>
+        <h1>
+          EFEKTYWNE ROZWIĄZANIA<br />
+          DLA WASZEGO BIZNESU
+        </h1>
+        <button class="button" type="button">Zamów usługe</button>
       </section>
 
       <!--Pierwsza sekcja - lorem ipsum-->
